nginx/nginx-ingress-nginx-suhani.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-suhani
  namespace: suhani
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - "nginx.suhani.local"
      secretName: nginx-tls
  rules:
    - host: "nginx.suhani.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
